manifests/base/media/deploy-filebrowser.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: media
spec:
  selector:
    matchLabels:
      app: filebrowser
  replicas: 1
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 61003
        fsGroup: 100
      containers:
        - name: filebrowser
          image: filebrowser
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - mountPath: /srv/local/downloads
              name: transmission-downloads
            - mountPath: /srv/local/music
              name: server-media-files
              subPath: music
            - mountPath: /srv/local/readings
              name: server-media-files
              subPath: readings
            - mountPath: /srv/local/videos
              name: server-media-files
              subPath: videos
            - mountPath: /home/filebrowser/data
              name: filebrowser-data
              subPath: database.db
            - mountPath: /home/filebrowser/data/config.yaml
              name: filebrowser-config
              subPath: filebrowser.yml
            - name: ca-certificates
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
          ports:
            - containerPort: 80
      volumes:
        - name: domain-tls
          secret:
            secretName: domain-tls-filebrowser
        - name: ca-certificates
        - name: filebrowser-data
          persistentVolumeClaim:
            claimName: filebrowser-data
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
        - name: filebrowser-config
          secret:
            secretName: filebrowser-config
        - name: server-media-files
          hostPath:
            # FIXME: variabilise
            path: /srv/volume1/
