manifests/base/media/svc-filebrowser.yml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: media
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 80
