manifests/base/media/ingressroute-filebrowser.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: <FILEBROWSER_MATCH>
      observability:
        accessLogs: true
        metrics: true
      services:
        - name: filebrowser
          namespace: media
          port: 80
  tls:
    secretName: domain-tls-filebrowser
    domains:
      - main: <FILEBROWSER_DOMAIN>
